--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,7 @@
     "require": {
         "php": "^8.2",
         "blade-ui-kit/blade-heroicons": "^2.5",
+        "blade-ui-kit/blade-zondicons": "^1.5",
         "laravel/framework": "^11.31",
         "laravel/tinker": "^2.9"
     },
