--- a/composer.json
+++ b/composer.json
@@ -9,10 +9,12 @@
         "php": "^8.2",
         "blade-ui-kit/blade-heroicons": "^2.5",
         "blade-ui-kit/blade-zondicons": "^1.5",
+        "davidhsianturi/blade-bootstrap-icons": "^1.5",
         "filament/notifications": "^3.2",
         "laravel/framework": "^11.31",
         "laravel/tinker": "^2.9",
-        "livewire/livewire": "^3.5"
+        "livewire/livewire": "^3.5",
+        "spatie/laravel-medialibrary": "^11.11"
     },
     "require-dev": {
         "fakerphp/faker": "^1.23",
