--- a/.env.testing
+++ b/.env.testing
@@ -1,6 +1,6 @@
 APP_NAME=Bedieningenprofiel
 APP_ENV=local
-APP_KEY=base64:3onIKVy5xmO2bceE2ZkR+DNaCp3O9AnQKR639/SHTV4=
+# APP_KEY= GENERATE A KEY USING ARTISAN
 APP_DEBUG=true
 APP_TIMEZONE=UTC
 APP_URL=http://bedieningenprofiel-laravel.test
