--- a/.env.testing
+++ b/.env.testing
@@ -1,6 +1,6 @@
 APP_NAME=Bedieningenprofiel
 APP_ENV=local
-# APP_KEY= GENERATE A KEY USING ARTISAN
+APP_KEY=base64:meZiLj70h8uN6nHgZAU0VwnfxQWCXxKO2Wj++3PbrFA=
 APP_DEBUG=true
 APP_TIMEZONE=UTC
 APP_URL=http://bedieningenprofiel-laravel.test
