--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
         "vite": "^6.0"
     },
     "dependencies": {
-        "alpinejs": "^3.14.8"
+        "alpinejs": "^3.14.8",
+        "lucide": "^0.474.0"
     }
 }
