--- a/composer.json
+++ b/composer.json
@@ -14,12 +14,14 @@
         "blade-ui-kit/blade-zondicons": "^1.5",
         "davidhsianturi/blade-bootstrap-icons": "^1.5",
         "filament/notifications": "^3.2",
+        "hashids/hashids": "^5.0",
         "laravel/framework": "^11.31",
         "laravel/tinker": "^2.9",
         "league/flysystem-aws-s3-v3": "^3.0",
         "livewire/livewire": "^3.5",
         "owenvoke/blade-fontawesome": "^2.8",
-        "spatie/laravel-medialibrary": "^11.11"
+        "spatie/laravel-medialibrary": "^11.11",
+        "vinkla/hashids": "^12.0"
     },
     "require-dev": {
         "barryvdh/laravel-debugbar": "^3.14",
